--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,8 +1,10 @@
 nav ul {
   list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 50px;
   padding: 0;
+  align-items: center;
+  justify-content: center;
 }
 
 nav ul li a {
