--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -16,3 +16,13 @@ nav ul li a {
 nav ul li a:hover {
   color: #007bff;
 }
+
+.language{
+  margin-bottom: 5px;
+  padding: 5px;
+  border: 3px solid black;
+  background: var(--boxColor);
+}
+
+
+
