--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -47,6 +47,14 @@ h1{
   padding: 5px;
   border: 3px solid black;
   background: var(--boxColor);
+  border-radius: 3px;
+}
+
+.language:hover{
+  border: 3px solid yellow;
+  transition: 1s;
+  margin: 5px;
+  box-shadow: 0px 0px 30px rgb(0, 0, 0);
 }
 
 .category{
