--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -23,8 +23,11 @@ h1{
 
 .homediv{
   background: rgb(132, 129, 129);
-  width: 500px;
+  width: 200px;
+  height: 200px;
+
   border-radius: 10px;
+  text-decoration: none;
 }
 
 .homediv button{
@@ -33,13 +36,17 @@ h1{
 
 .homediv:hover{
   background: rgb(204, 22, 22);
-  transition: 4s;
+  transition: 2s;
+  padding: 10px;
+  padding-top: 0px;
+  box-shadow: 0px 0px 20px rgb(0, 255, 255);
 }
 
 .home{
   display: flex;
   gap: 50px;
   text-align: center;
+  justify-content: center;
 }
 
 .language{
