--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -25,7 +25,7 @@ h1{
   background: rgb(132, 129, 129);
   width: 200px;
   height: 200px;
-
+  border: 1px solid black;
   border-radius: 10px;
   text-decoration: none;
 }
@@ -35,11 +35,11 @@ h1{
 }
 
 .homediv:hover{
-  background: rgb(204, 22, 22);
+  background: rgb(255, 255, 255);
   transition: 2s;
   padding: 10px;
   padding-top: 0px;
-  box-shadow: 0px 0px 20px rgb(0, 255, 255);
+  box-shadow: 0px 0px 20px rgb(255, 0, 0);
 }
 
 .home{
