--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -23,15 +23,29 @@ h1{
 
 .homediv{
   background: rgb(132, 129, 129);
-  width: 200px;
-  height: 200px;
+  width: 210px;
+  height: 210px;
   border: 1px solid black;
   border-radius: 10px;
   text-decoration: none;
+  flex-direction: column;
+  justify-content: space-between;
+  display: flex;
+  padding: 5px;
 }
 
 .homediv button{
   cursor: pointer;
+}
+
+.body{
+  margin-top: auto;
+}
+
+.homediv h4{
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  
 }
 
 .homediv:hover{
