--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,3 +1,7 @@
+html{
+  background: linear-gradient(90deg, rgb(102, 20, 254), rgb(188, 43, 255))
+}
+
 nav ul {
   list-style: none;
   display: flex;
