--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -4,8 +4,8 @@ html{
 
 nav {
   display: flex;
-  justify-content: center; /* Horizontally centers the nav */
-  width: 100%; /* Takes full width to allow proper centering */
+  justify-content: center;
+  width: 100%;
 }
 
 nav > ul {
@@ -14,9 +14,15 @@ nav > ul {
   gap: 50px;
   padding: 10px;
   margin: 0;
-  border: 1px solid #ddd;
+  border: 2px solid #000000;
   border-radius: 4px;
-  
+  background: rgba(255, 245, 245, 0.378);
+}
+
+nav ul:hover{
+  background: rgb(255, 255, 255);
+  transition: 1s;
+  padding: 15px;
 }
 
 nav ul li a {
@@ -66,7 +72,7 @@ h1{
 
 .homediv:hover{
   background: rgb(255, 255, 255) !important;
-  transition: 2s;
+  transition: 1s;
   padding: 10px;
   padding-top: 0px;
   box-shadow: 0px 0px 20px rgb(255, 0, 0);
@@ -198,5 +204,11 @@ h1{
 .subsection-content{
   background: rgba(255, 255, 255, 0.403);
   padding: 3px;
+  border-radius: 5px;
+}
+
+button{
+  background: rgba(255, 255, 255, 0.871);
+  border: 1px solid black;
   border-radius: 5px;
 }
