--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -17,6 +17,7 @@ nav > ul {
   border: 2px solid #000000;
   border-radius: 4px;
   background: rgba(255, 245, 245, 0.378);
+  transition: 1s;
 }
 
 nav ul:hover{
@@ -54,6 +55,7 @@ h1{
   justify-content: space-between;
   display: flex;
   padding: 5px;
+  transition: 1s;
 }
 
 .homediv button{
@@ -91,13 +93,14 @@ h1{
   border: 3px solid black;
   background: var(--boxColor);
   border-radius: 3px;
+  transition: 1s;
 }
 
 .language:hover{
   border: 3px solid yellow;
   transition: 1s;
   margin: 5px;
-  box-shadow: 0px 0px 30px rgb(0, 0, 0);
+  box-shadow: 0px 0px 30px rgb(255, 255, 255);
 }
 
 .category{
@@ -211,4 +214,5 @@ button{
   background: rgba(255, 255, 255, 0.871);
   border: 1px solid black;
   border-radius: 5px;
+  transition: 1s;
 }
