--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -44,9 +44,7 @@ h1, h2{
   text-align: center;
 }
 
-h2{
-  color: rgb(188, 166, 255);
-}
+
 
 .homediv{
   background: rgb(132, 129, 129);
@@ -199,8 +197,8 @@ h2{
   margin: 10px auto;
   padding: 10px;
   max-width: 80%;
-  background-color: #f8f9fa;
-  border-radius: 4px;
+  background-color: #f8f9fa9f;
+  border-radius: 20px;
   animation: fadeIn 0.3s ease;
 }
 
