added videos to calc 2 page

--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -281,12 +281,13 @@ h1{
   display: flex;
   gap: 10px;        
   flex-wrap: wrap;
-  justify-content: flex-start; 
+  justify-content:space-evenly; 
 }
 
 .video-wrapper {
-  width: 500px;      
-  flex-shrink: 0;    
+  width: 400px;      
+  flex-shrink: 0; 
+  border: 5px solid rgb(243, 4, 4);   
 }
 
 .video-responsive {
