--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -327,3 +327,12 @@ h1{
   border-radius: 40px;
   padding: 20px;
 }
+
+.tooldiv h2{
+  transition: 1s;
+}
+
+.tooldiv h2:hover{
+  color: white;
+  transition: 1s;
+}
