worked on resource divs

--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -266,10 +266,22 @@ h1{
 
 .divbut2{
   transition: 1s;
+  border-radius: 100px;
+  padding: 5px;
+  
+}
+
+.divbut3{
+  transition: 1s;
+  border-radius: 100px;
+  padding: 5px;
+  border: none;
+  margin-top: 20px;
+  
 }
 
 
-.divbut:hover, .divbut2:hover{
+.divbut:hover, .divbut2:hover, .divbut3:hover{
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 10px;
@@ -322,10 +334,22 @@ h1{
   align-self: center;
   justify-self: center;
   background: rgba(255, 255, 255, 0.401);
-  width: 60%;
+  width: 800px;
   margin: 10px;
   border-radius: 40px;
   padding: 20px;
+  transition: 1s;
+}
+
+.tooldiv p{
+  text-align: center;
+}
+
+.tooldiv:hover{
+  background: rgba(255, 255, 255, 0.786);
+  padding: 40px;
+  border: 5px solid rgba(0, 81, 255, 0.488);
+  transition: 1s;
 }
 
 .tooldiv h2{
@@ -340,3 +364,4 @@ h1{
 .language h4{
   text-align: center;
 }
+
