--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -326,7 +326,7 @@ h1{
   border: none;
 }
 
-.tooldiv{
+.tooldiv, .languagediv{
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -350,6 +350,14 @@ h1{
   padding: 40px;
   border: 5px solid rgba(0, 81, 255, 0.488);
   transition: 1s;
+}
+
+.languagediv:hover{
+  background: rgba(255, 255, 255, 0.786);
+  padding: 40px;
+  border: 5px solid rgba(255, 0, 106, 0.488);
+  transition: 1s;
+
 }
 
 .tooldiv h2{
