--- a/new-vite-app/src/App.css
+++ b/new-vite-app/src/App.css
@@ -396,6 +396,10 @@ h1{
   transition: 1s;
 }
 
+p{
+  margin:5px;
+}
+
 .tooldiv{
   border: 5px solid rgb(0, 234, 255);
 }
@@ -439,6 +443,27 @@ h1{
 .code-snippet {
   background-color: #f4f4f4;
   padding: 1em;
+  border-radius: 8px;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  font-size: 0.9em;
+  max-width: 100%;
+}
+.code-snippet2 {
+  background-color: #f4f4f400;
+  padding: 0;
+  border-radius: 8px;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  font-size: 0.9em;
+  max-width: 60%;
+}
+
+.code-snippet3 {
+  background-color: #f4f4f400;
+  padding: 0;
   border-radius: 8px;
   overflow-x: auto;
   white-space: pre-wrap;
